<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Final</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="all_movies">Все</string>
    <string name="button_more">More</string>
    <string name="show_all">Показать все</string>
    <string name="movie_detail_staff">Над фильмом работали</string>
    <string name="movie_detail_cast">В фильме снимались</string>
    <string name="movie_detail_gallery">Галерея</string>
    <string name="movie_detail_similar">Похожие фильмы</string>
    <string name="empty" />
    <string name="premiers">Премьеры</string>
    <string name="popular">Популярное</string>
    <string name="gallery">Галерeя</string>
    <string name="top">Топ 250</string>
    <string name="usa_action">Боевики США</string>
    <string name="french_drama">Драмы Франции</string>
    <string name="series">Сериалы</string>
    <string name="series_season">Сезон</string>
    <string name="seasons_and_serieses">Сезоны и серии</string>
    <string name="episode_title">%d cерия. %s</string>
    <string name="series_title">%d сезон, %s</string>
    <string name="series_numbers">%s, %s</string>
    <plurals name="season_counter">
        <item quantity="one">%d сезон</item>
        <item quantity="two">%d сезона</item>
        <item quantity="few">%d сезона</item>
        <item quantity="many">%d сезонов</item>
        <item quantity="other">%d сезонов</item>
    </plurals>
    <plurals name="episodes_counter">
        <item quantity="one">%d серия</item>
        <item quantity="two">%d серии</item>
        <item quantity="few">%d серии</item>
        <item quantity="many">%d серий</item>
        <item quantity="other">%d серий</item>
    </plurals>
    <string name="release_date">%s %s %s</string>
    <string name="filmography_more">К списку</string>
    <string name="filmography_title">Фильмография</string>
    <plurals name="filmography_count">
        <item quantity="one">%d фильм</item>
        <item quantity="two">%d фильма</item>
        <item quantity="few">%d фильма</item>
        <item quantity="many">%d фильмов</item>
        <item quantity="other">%d фильма</item>
    </plurals>
    <string-array name="release_month">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>
    <string-array name="filter_country">
        <item>Россия</item>
        <item>Великобритания</item>
        <item>Германия</item>
        <item>США</item>
        <item>Франция</item>
    </string-array>
    <string-array name="filter_genre">
        <item>Комедия</item>
        <item>Мелодрама</item>
        <item>Боевик</item>
        <item>Вестерн</item>
        <item>Драма</item>
    </string-array>
    <string name="filter_period_from">с %d</string>
    <string name="filter_period_to">по %d</string>
    <string name="filter_period_from_to">по %d</string>
    <string name="filter_county_title">Страна</string>
    <string name="filter_genre_title">Жанр</string>
    <string name="filter_period_title">Год</string>
    <string name="profession_actor_male">Актер</string>
    <string name="profession_actor_female">Актриса</string>
    <string name="profession_himself">Актер: играет себя</string>
    <string name="profession_herself">Актриса: играет себя</string>
    <string name="profession_editor">Монтажер</string>
    <string name="profession_design">Художник</string>
    <string name="profession_composer">Композитор</string>
    <string name="profession_operator">Оператор</string>
    <string name="profession_writer">Сценарист</string>
    <string name="profession_translator">Переводчик</string>
    <string name="profession_voice_director">Звукорежиссер</string>
    <string name="profession_producer">Продюсер</string>
    <string name="profession_director">Режиссер</string>
    <string name="profession_hrono_titr_male">Актер дубляжа</string>
    <string name="profession_hrono_titr_female">Актриса дубляжа</string>
    <string name="search_hint">Фильмы, актёры, режиссёры</string>
    <string name="movie_type_all">Все</string>
    <string name="movie_type_full">Фильмы</string>
    <string name="movie_type_serial">Сериалы</string>
    <string name="search_settings">Настройки поиска</string>
    <string name="enter_country">Введите страну</string>
    <string name="enter_genre">Введите жанр</string>
</resources>