<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <ImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            <LinearLayout
                android:id="@+id/movieDescLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/detail_vertical_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moviePoster"
                android:orientation="vertical"
                style="@style/Container">
                <TextView
                    android:id="@+id/movieShortDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textFontWeight="700"
                    android:textSize="@dimen/regular_font_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="20dp"
                    tools:text="Молодые москвичи бегут от своих проблем в русскую глушь. Мистическая утопия Дмитрия Глуховского"
                    />
                <TextView
                    android:id="@+id/movieDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/regular_font_size"
                    tools:text="Столкнувшись с неразрешимыми проблемами, пять молодых москвичей убегают в монастырь неподалеку от полузаброшенной деревни Топи. Они воспринимают.."/>
            </LinearLayout>
            <com.android.main.presentation.personList.PersonHorizontalListView
                android:id="@+id/movieCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vertical_margin"
                custom:title="@string/movie_detail_cast"
                app:layout_constraintTop_toBottomOf="@+id/movieDescLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <com.android.main.presentation.personList.PersonHorizontalListView
                android:id="@+id/movieStaff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vertical_margin"
                custom:title="@string/movie_detail_staff"
                app:layout_constraintTop_toBottomOf="@+id/movieCast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <com.android.main.presentation.moveiList.MovieHorizontalListView
                android:id="@+id/movieSimilar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vertical_margin"
                custom:title="@string/movie_detail_similar"
                app:isCountable="true"
                app:layout_constraintTop_toBottomOf="@+id/movieStaff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <LinearLayout
                android:id="@+id/loading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="invisible"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/text_blue"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>